--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-lg-8 align-self-baseline">
                     <p class="text-white-75 font-weight-light mb-5">Suntem o trupa de ceva folk care inregistreaza piese
-                        si vrem sa le ascultati sarakiilor
+                        si vrem sa le ascultati sarakiiilor
                     </p>
                     <a
                         class="btn btn-primary btn-xl js-scroll-trigger"
@@ -165,8 +165,8 @@
                                 alt=""
                             />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Habar n-am, poate vreti sa scrieti ceva aici</div>
                             </div>
                         </a>
                     </div>
@@ -181,8 +181,8 @@
                                 alt=""
                             />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Habar n-am, poate vreti sa scrieti ceva aici</div>
                             </div>
                         </a>
                     </div>
@@ -197,8 +197,8 @@
                                 alt=""
                             />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Habar n-am, poate vreti sa scrieti ceva aici</div>
                             </div>
                         </a>
                     </div>
@@ -213,8 +213,8 @@
                                 alt=""
                             />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Habar n-am, poate vreti sa scrieti ceva aici</div>
                             </div>
                         </a>
                     </div>
@@ -229,8 +229,8 @@
                                 alt=""
                             />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <div class="project-category text-white-50"></div>
+                                <div class="project-name">Habar n-am, poate vreti sa scrieti ceva aici</div>
                             </div>
                         </a>
                     </div>
