--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
     <nav
         class="navbar navbar-expand-lg navbar-light fixed-top py-3"
         id="mainNav"
-        style="background-color: white;
-        opacity: 90%;
-        height: 104px;"
     >
         <div class="container">
             <a
@@ -83,6 +80,7 @@
                     <li class="nav-item"><a
                             class="nav-link js-scroll-trigger"
                             href="#about"
+                            style="outline-color: beige;"
                         >Despre Noi</a></li>
                     <li class="nav-item"><a
                             class="nav-link js-scroll-trigger"
