--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link
         rel="icon"
         type="image/x-icon"
-        href="assets/img/favicon.ico"
+        href="assets/img/logo_59T_icon.ico"
     />
     <!-- Font Awesome icons -->
     <script
@@ -60,7 +60,7 @@
             > <img
                     src="/assets/img/Logo.png"
                     alt="Home"
-                    style="height: 110px;
+                    style="height: 100px;
                     border-radius: 50px;"
                 ></a>
             <button
