--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                 class="navbar-brand js-scroll-trigger"
                 href="#page-top"
             > <img
-                    src="/assets/img/Logo.png"
+                    src="/assets/img/sayonara-bm-logo---Copy.png"
                     alt="Home"
-                    style="height: 100px;
-                    border-radius: 50px;"
+                    style="height: 90px;
+                    border-radius: 70px;"
                 ></a>
             <button
                 class="navbar-toggler navbar-toggler-right"
@@ -94,6 +94,10 @@
                             class="nav-link js-scroll-trigger"
                             href="#contact"
                         >Contact</a></li>
+                    <li class="nav-item"><a
+                            class="nav-link js-scroll-trigger"
+                            href="#contact"
+                        >Blog</a></li>
                 </ul>
             </div>
         </div>
@@ -128,6 +132,15 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
+                    <img
+                        src="assets/img/sayonara-bm-logo---Copy.png"
+                        alt="Logo"
+                        style="    display: block;
+                        margin-left: auto;
+                        margin-right: auto;
+                        width: 50%;
+                        size: 50vmax;"
+                    >
                     <h2 class="text-white mt-0">Despre noi</h2>
                     <hr class="divider light my-4" />
                     <p class="text-white-50 mb-4">Salut sau konbanwa. Wow, am așteptat super mult postarea asta. Am
@@ -257,7 +270,7 @@
                 <h2 class="mb-4">Contacteaza-ne mai jos!</h2>
                 <a
                     class="btn btn-light btn-xl"
-                    href="https://startbootstrap.com/themes/creative/"
+                    href="#contact"
                 >Contact</a>
             </div>
         </section>
