--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
                     <hr class="divider my-4" />
                 </div>
                 <div class="col-lg-8 align-self-baseline">
-                    <p class="text-white-75 font-weight-light mb-5">Suntem o trupa de ceva folk care inregistreaza piese
+                    <!-- <p class="text-white-75 font-weight-light mb-5">Suntem o trupa de ceva folk care inregistreaza piese
                         si vrem sa le ascultati sarakiiilor
                     </p>
                     <a
                         class="btn btn-primary btn-xl js-scroll-trigger"
                         href="#about"
-                    >Afla mai multe despre noi</a>
+                    >Afla mai multe despre noi</a> -->
                 </div>
             </div>
         </div>
@@ -141,6 +141,7 @@
                         width: 50%;
                         size: 50vmax;"
                     >
+
                     <h2 class="text-white mt-0">Despre noi</h2>
                     <hr class="divider light my-4" />
                     <p class="text-white-50 mb-4">Salut sau konbanwa. Wow, am așteptat super mult postarea asta. Am
@@ -264,10 +265,12 @@
                 </div>
             </div>
         </div>
+        <hr class="divider my-4" />
         <!-- Call to action-->
         <section class="page-section bg-dark text-white">
             <div class="container text-center">
                 <h2 class="mb-4">Contacteaza-ne mai jos!</h2>
+
                 <a
                     class="btn btn-light btn-xl"
                     href="#contact"
